Opprettet med Colab

--- a/Arbeidskrav_2_Daniel_Dale_Laabak.ipynb
+++ b/Arbeidskrav_2_Daniel_Dale_Laabak.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8O2MzwWtGQuNvVBjxe/3v"
+      "authorship_tag": "ABX9TyMKm90G9XnV2gdGR2Mdh6rG"
     },
     "kernelspec": {
       "name": "python3",
@@ -142,7 +142,7 @@
         "#OPPGAVE 3\n",
         "import numpy as np\n",
         "v_grad = float(input('Skriv inn gradtallet:' ))\n",
-        "v_rad = v_grad*np.pi/180\n",
+        "v_rad = v_grad * np.pi/180\n",
         "print(v_grad,\"grader tilsvarer\",v_rad,\"radianer.\")"
       ],
       "metadata": {
@@ -204,10 +204,23 @@
         "\n"
       ],
       "metadata": {
-        "id": "teBJdFYM3HCH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "teBJdFYM3HCH",
+        "outputId": "c23bdb29-7bee-4f8d-d7ec-40d3c3dd19d3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skriv inn et land, eksempelvis England: England\n",
+            "London er hovedstaden i England og det er 8.982 mill. innbyggere i London\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -273,7 +286,7 @@
         "a = float(input(\"Skriv inn lengden på kateten i trekanten (som halvsirkelen er satt sammen med)\"))\n",
         "b = float(input(\"Skriv inn lengden på kateten i trekanten (den andre kateten)\"))\n",
         "\n",
-        "r = a/2 #Radius på sirkelen\n",
+        "r = a / 2 #Radius på sirkelen\n",
         "\n",
         "areal_halvsirkel = (np.pi * (a/2)**2) / 2 #Finner arealet av sirkelen og deler dette på to (halvsirkel)\n",
         "areal_trekant = 0.5 * a * b #Finner arealet på trekanten\n",
@@ -281,7 +294,7 @@
         "\n",
         "buelengde = np.pi * r #Finner buelengden på halvsirkelen\n",
         "hypotenus_trekant = np.sqrt(a**2 + b**2) #Finner hypotenusen\n",
-        "omkrets_trekant = a+b+hypotenus_trekant #Finner omkrets av trekanten\n",
+        "omkrets_trekant = a + b + hypotenus_trekant #Finner omkrets av trekanten\n",
         "omkrets_total = buelengde + b + hypotenus_trekant #Finner omkrets av hele figuren\n",
         "\n",
         "print(f\"Arealet til figuren - rettvinklet trekant med halvsirkel er {areal_total:.2f} og omkretsen av figuren er {omkrets_total:.2f}\")\n",
